--- a/css/styles.css
+++ b/css/styles.css
@@ -24,7 +24,7 @@ a, link{
   line-height: 1.17;
   letter-spacing: 0.03em;
   text-transform: uppercase;
-  color: var(--brand-color);
+  color: var(--items-logo-color);
 }
 .subtitle {
     font-weight: 500;
@@ -41,8 +41,8 @@ letter-spacing: 0.02em;
 }
 
 /* header */
-.logo-web-color {
-    color: var(--items-logo-color);
+.header-logo-studio {
+    color: var(--brand-color);
 }
 .header-link {
     font-weight: 500;
@@ -117,7 +117,7 @@ line-height: 1.11;
 .footer {
     background-color: var(--brand-color);
 }
-.logo-studio-color{
+.footer-logo-studio {
     color: #F4F4FD;
 }
 .footer-text {
