--- a/css/styles.css
+++ b/css/styles.css
@@ -1,24 +1,25 @@
 /* common styles */
-:root{
+:root {
   --main-background-color: #ffffff;
-  --brand-color: #2E2F42;
-  --items-logo-color: #4D5AE5;
-  --active-hover-color: #404BBF;
+  --brand-color: #2e2f42;
+  --items-logo-color: #4d5ae5;
+  --active-hover-color: #404bbf;
 }
-a, link{
-    text-decoration: none;
-    font-style: normal;
+a,
+link {
+  text-decoration: none;
+  font-style: normal;
 }
 .list {
-    list-style-type: none;
+  list-style-type: none;
 }
 .body {
-    color: #434455;
-    background-color: var(--main-background-color);
-    font-family: "Roboto", sans-serif;
-  }
-.logo{
-    font-family: 'Raleway',sans-serif;
+  color: #434455;
+  background-color: var(--main-background-color);
+  font-family: "Roboto", sans-serif;
+}
+.logo {
+  font-family: "Raleway", sans-serif;
   font-weight: 800;
   font-size: 18px;
   line-height: 1.17;
@@ -27,100 +28,100 @@ a, link{
   color: var(--items-logo-color);
 }
 .subtitle {
-    font-weight: 500;
-font-size: 20px;
-line-height: 24px;
-letter-spacing: 0.02em;
-color: var(--brand-color);
-
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 24px;
+  letter-spacing: 0.02em;
+  color: var(--brand-color);
 }
-.text{
-    font-size: 16px;
-line-height: 1.5;
-letter-spacing: 0.02em;
+.text {
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
 }
 
 /* header */
 .header-logo-studio {
-    color: var(--brand-color);
+  color: var(--brand-color);
 }
 .header-link {
-    font-weight: 500;
-    font-size: 16px;
-    line-height: 1.5;
-    letter-spacing: 0.02em;
-    color: var(--brand-color);
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  color: var(--brand-color);
 }
 .header-link:hover,
-.header-link:focus{
-  color: var(--active-hover-color);}
+.header-link:focus {
+  color: var(--active-hover-color);
+}
 
-
+.header-address {
+  font-style: normal;
+}
 .address-link {
-    color: #434455;
+  color: #434455;
 }
 .address-link:hover,
 .address-link:focus {
- color: var(--active-hover-color);   
+  color: var(--active-hover-color);
 }
 
 /* hero section */
 .hero-section {
-    background-color: var(--brand-color);
+  background-color: var(--brand-color);
 }
 .hero-title {
-font-weight: 700;
-font-size: 56px;
-line-height: 1.7;
-letter-spacing: 0.02em;
-color: #FFFFFF;
+  font-weight: 700;
+  font-size: 56px;
+  line-height: 1.7;
+  letter-spacing: 0.02em;
+  color: #ffffff;
 }
 .hero-button {
-    background-color: var(--items-logo-color);
-    font-weight: 500;
-font-size: 16px;
-line-height: 1.5;
-letter-spacing: 0.04em;
-color: #FFFFFF;
+  background-color: var(--items-logo-color);
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.04em;
+  color: #ffffff;
 }
 .hero-button:hover,
-.hero-button:focus{
-    background-color: var(--active-hover-color);
+.hero-button:focus {
+  background-color: var(--active-hover-color);
 }
 
 /* benefits section */
 
-
 /* knowledges section */
 .knowledges-title {
-    font-weight: 700;
-font-size: 36px;
-line-height: 1.11;
-    color: var(--brand-color);
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 1.11;
+  color: var(--brand-color);
 }
 
 /* team seaction */
 .team-section {
-    background-color: #F4F4FD;
+  background-color: #f4f4fd;
 }
 .team-title {
-    font-weight: 700;
-font-size: 36px;
-line-height: 1.11;
-    color: var(--brand-color);
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 1.11;
+  color: var(--brand-color);
 }
-.team-item{
-    background-color: #FFFFFF;
+.team-item {
+  background-color: #ffffff;
 }
 
 /* footer */
 .footer {
-    background-color: var(--brand-color);
+  background-color: var(--brand-color);
 }
 .footer-logo-studio {
-    color: #F4F4FD;
+  color: #f4f4fd;
 }
 .footer-text {
-    color: #F4F4FD;
+  color: #f4f4fd;
 }
- 
