--- a/css/styles.css
+++ b/css/styles.css
@@ -140,6 +140,7 @@ link {
                                       /* PORTFOLIO PAGE */
                                       /* filter section */
 .filter-button{
+  font-family: "Roboto", sans-serif;
   font-weight: 500;
   font-size: 16px;
   line-height: 1.5;
