--- a/css/styles.css
+++ b/css/styles.css
@@ -30,7 +30,7 @@ link {
 .subtitle {
   font-weight: 500;
   font-size: 20px;
-  line-height: 24px;
+  line-height: 1.2;
   letter-spacing: 0.02em;
   color: var(--brand-color);
 }
